Fixed overflow, Touch devices optim

--- a/css/home.css
+++ b/css/home.css
@@ -184,6 +184,12 @@
   opacity: 0.2;
 }
 
+@media (pointer: none) {
+  .about-card-grid:hover .about-card {
+    opacity: initial;
+  }
+}
+
 .about-card {
   scale: 0;
   rotate: -10deg;
